[ADDED] Create endpoint for SecQuestion
